Fix start page collapse bug

--- a/assets/sass/modules/_marketing.scss
+++ b/assets/sass/modules/_marketing.scss
@@ -1,6 +1,6 @@
 .ui.grid>.row.mobile-column-reverse {
   /* Grid is collapsed */
-  @media (max-width: 768px) {
+  @media (max-width: 767px) {
     flex-direction: column-reverse;
   }
 }
